tests/spec/lex/snapshots/chaining_methods_with_question_mark.snap
---
source: tests/spec/lex/mod.rs
description: |-
  method1()?
              .method2()
---
LexResult {
    tokens: [
        Token {
            kind: Identifier,
            text: "method1",
            byte_offset: 0,
            byte_length: 7,
        },
        Token {
            kind: LeftParen,
            text: "(",
            byte_offset: 7,
            byte_length: 1,
        },
        Token {
            kind: RightParen,
            text: ")",
            byte_offset: 8,
            byte_length: 1,
        },
        Token {
            kind: QuestionMark,
            text: "?",
            byte_offset: 9,
            byte_length: 1,
        },
        Token {
            kind: Dot,
            text: ".",
            byte_offset: 23,
            byte_length: 1,
        },
        Token {
            kind: Identifier,
            text: "method2",
            byte_offset: 24,
            byte_length: 7,
        },
        Token {
            kind: LeftParen,
            text: "(",
            byte_offset: 31,
            byte_length: 1,
        },
        Token {
            kind: RightParen,
            text: ")",
            byte_offset: 32,
            byte_length: 1,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 33,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
