tests/spec/lex/snapshots/char_escaped_carriage_return.snap
---
source: tests/spec/lex/mod.rs
description: "'\\r'"
---
LexResult {
    tokens: [
        Token {
            kind: Char,
            text: "'\\r'",
            byte_offset: 0,
            byte_length: 4,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 4,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
