tests/spec/lex/snapshots/char_escaped_hex.snap
---
source: tests/spec/lex/mod.rs
description: "'\\x41'"
---
LexResult {
    tokens: [
        Token {
            kind: Char,
            text: "'\\x41'",
            byte_offset: 0,
            byte_length: 6,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 6,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
