tests/spec/lex/snapshots/char_escaped_null.snap
---
source: tests/spec/lex/mod.rs
description: "'\\0'"
---
LexResult {
    tokens: [
        Token {
            kind: Char,
            text: "'\\0'",
            byte_offset: 0,
            byte_length: 4,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 4,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
