tests/spec/lex/snapshots/char_escaped_quote.snap
---
source: tests/spec/lex/mod.rs
description: "'\\''"
---
LexResult {
    tokens: [
        Token {
            kind: Char,
            text: "'\\''",
            byte_offset: 0,
            byte_length: 4,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 4,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
