tests/spec/lex/snapshots/char_escaped_tab.snap
---
source: tests/spec/lex/mod.rs
description: "'\\t'"
---
LexResult {
    tokens: [
        Token {
            kind: Char,
            text: "'\\t'",
            byte_offset: 0,
            byte_length: 4,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 4,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
