tests/spec/lex/snapshots/char_letter.snap
---
source: tests/spec/lex/mod.rs
description: "'b'"
---
LexResult {
    tokens: [
        Token {
            kind: Char,
            text: "'b'",
            byte_offset: 0,
            byte_length: 3,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 3,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
